<resources>
    <string name="app_name">NHL News Reader</string>
    <string name="title_article_detail">Post Detail</string>
    <string name="title_article_list">NHL News Reader</string>
	<string name="btn_offline_reading">Save for later</string>
	<string name="btn_settings">Settings</string>
	<string name="btn_mark_unread">Mark unread</string>
	<string name="btn_refresh">Refresh</string>
	
	<string-array name="nhl_feeds">
		<item>http://www.nhl.com/rss/news.xml</item>
		<item>http://mapleleafs.nhl.com/rss/news.xml</item>
		<item>http://ducks.nhl.com/rss/news.xml</item>
		<item>http://devils.nhl.com/rss/news.xml</item>
		<item>http://sabres.nhl.com/rss/news.xml</item>
		<item>http://canucks.nhl.com/rss/news.xml</item>
		<item>http://flames.nhl.com/rss/news.xml</item>
		<item>http://oilers.nhl.com/rss/news.xml</item>
		<item>http://kings.nhl.com/rss/news.xml</item>
		<item>http://sharks.nhl.com/rss/news.xml</item>
		<item>http://jets.nhl.com/rss/news.xml</item>
		<item>http://canadiens.nhl.com/rss/news.xml</item>
		<item>http://senators.nhl.com/rss/news.xml</item>
		<item>http://panthers.nhl.com/rss/news.xml</item>
		<item>http://penguins.nhl.com/rss/news.xml</item>
		<item>http://flyers.nhl.com/rss/news.xml</item>
		<item>http://avalanche.nhl.com/rss/news.xml</item>
		<item>http://coyotes.nhl.com/rss/news.xml</item>
		<item>http://bluejackets.nhl.com/rss/news.xml</item>
		<item>http://wild.nhl.com/rss/news.xml</item>
		<item>http://redwings.nhl.com/rss/news.xml</item>
		<item>http://stars.nhl.com/rss/news.xml</item>
		<item>http://rangers.nhl.com/rss/news.xml</item>
		<item>http://bruins.nhl.com/rss/news.xml</item>
		<item>http://islanders.nhl.com/rss/news.xml</item>
		<item>http://blues.nhl.com/rss/news.xml</item>
		<item>http://capitals.nhl.com/rss/news.xml</item>
		<item>http://lightning.nhl.com/rss/news.xml</item>
		<item>http://predators.nhl.com/rss/news.xml</item>
		<item>http://blackhawks.nhl.com/rss/news.xml</item>
		<item>http://hurricanes.nhl.com/rss/news.xml</item>
	</string-array>
	<string-array name="nhl_teams">
		<item>NHL</item>
		<item>Toronto Maple Leafs</item>
		<item>Anaheim Ducks</item>
		<item>New Jersey Devils</item>
		<item>Buffalo Sabres</item>
		<item>Vancouver Canucks</item>
		<item>Calgary Flames</item>
		<item>Edmonton Oilers</item>
		<item>Los Angeles Kings</item>
		<item>San Jose Sharks</item>
		<item>Winnipeg Jets</item>
		<item>Montreal Canadiens</item>
		<item>Ottawa Senators</item>
		<item>Florida Panthers</item>
		<item>Pittsburgh Penguins</item>
		<item>Philadelphia Flyers</item>
		<item>Colorado Avalanche</item>
		<item>Phoenix Coyotes</item>
		<item>Columbus Blue Jackets</item>
		<item>Minnesota Wild</item>
		<item>Detroit Red Wings</item>
		<item>Dallas Stars</item>
		<item>New York Rangers</item>
		<item>Boston Bruins</item>
		<item>New York Islanders</item>
		<item>St. Louis Blues</item>
		<item>Washington Capitals</item>
		<item>Tampa Bay Lightning</item>
		<item>Nashville Predators</item>
		<item>Chicago Blackhawks</item>
		<item>Carolina Hurricanes</item>
	</string-array>
	
	<string-array name="font_sizes_display">
	    <item>Small</item>
	    <item>Medium</item>
	    <item>Large</item>
	    <item>XLarge</item>
	</string-array>
		<string-array name="font_sizes">
	    <item>0.8</item>
	    <item>1.0</item>
	    <item>1.2</item>
	    <item>1.6</item>
	</string-array>
	
	<string-array name="theme_preference_display">
	    <item>Default (Limestone)</item>
	    <item>Midnight</item>
	</string-array>
	<string-array name="theme_preference">
	    <item>theme_default</item>
	    <item>theme_dark</item>
	</string-array>
	<string name="nhl_teams">NHL Teams</string>
	<string name="nhl_rss_feeds_summary">Follow your favorite team, or the NHL as whole.</string>
	<string name="nhl_rss_feeds">NHL RSS Feeds</string>
	<string name="rss_selection">RSS Selection</string>
	<string name="display_setting_title">Display</string>
	<string name="font_size_title">Font Size</string>
	<string name="font_size_title_summary">Need Larger text? Up the font size!</string>
	<string name="theme_color_title">Color Theme</string>
	<string name="theme_color_title_summary">Change the color theme of the Article Viewing Pane.</string>
	
	<!-- Theme Preferences -->
	<string-array name="theme_default">
	    <item>#FFFFFF</item> <!-- Background Color -->
	    <item>#38b4ea</item> <!-- Title Font Color -->
	    <item>#A8A8A8</item> <!-- Date Font Color -->
	    <item>#333333</item> <!-- Content Font Color -->
	    <item>#cee0de</item> <!-- Read Content BG Color -->
	</string-array>
	
	<string-array name="theme_dark">
	    <item>#3b3938</item> <!-- Background Color -->
	    <item>#ff652d</item> <!-- Title Font Color -->
	    <item>#efefef</item> <!-- Date Font Color -->
	    <item>#fcfcfc</item> <!-- Content Font Color -->
	    <item>#7a7573</item> <!-- Read Content BG Color -->
	</string-array>
	<string name="pref_title_offline" >Offline Mode</string>
	<string name="pref_offline_storage_title">Storage</string>
	<string name="pref_summary_offline_storage">Allow Articles to be saved for offline viewing</string>
	    
		
</resources>