<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
                
    <PreferenceCategory
            android:title="@string/rss_selection">
                
        <ListPreference
                android:key="rss_feed_preference"
                android:title="@string/nhl_rss_feeds"
                android:summary="@string/nhl_rss_feeds_summary"
                android:entries="@array/nhl_teams"
                android:entryValues="@array/nhl_feeds"
                android:dialogTitle="@string/nhl_teams" 
                android:defaultValue="http://www.nhl.com/rss/news.xml"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/display_setting_title">

        <ListPreference
                android:key="font_size_preference"
                android:title="@string/font_size_title"
                android:summary="@string/font_size_title_summary"
                android:entries="@array/font_sizes_display"
                android:entryValues="@array/font_sizes"
                android:dialogTitle="@string/font_size_title" 
                android:defaultValue="1.0"/>

        <ListPreference
                android:key="theme_color_preference"
                android:title="@string/theme_color_title"
                android:summary="@string/theme_color_title_summary"
                android:entries="@array/theme_preference_display"
                android:entryValues="@array/theme_preference"
                android:dialogTitle="@string/theme_color_title" 
                android:defaultValue="theme_default"/>
        
		
    </PreferenceCategory>
    
</PreferenceScreen>
